package com.cleanup.todoc.ui;

import android.app.Application;

import androidx.lifecycle.AndroidViewModel;
import androidx.lifecycle.LiveData;

import com.cleanup.todoc.model.Project;
import com.cleanup.todoc.model.Task;
import com.cleanup.todoc.repositories.TaskRepository;

import java.util.List;

/**
 * Created by Lycast on 30/11/2021.
 */
public class TaskViewModel extends AndroidViewModel {

    private final TaskRepository repository;

    private final LiveData<List<Task>> allTasks;
    private final LiveData<List<Project>> allProjects;

    public TaskViewModel (Application application) {
        super(application);
        repository = new TaskRepository(application);
        allTasks = repository.getAllTasks();
        allProjects = repository.getAllProjects();
    }

    public LiveData<List<Task>> getAllTasks() {return allTasks;}
    public LiveData<List<Project>> getAllProjects() {return allProjects;}

    public void insertTask(Task task) { repository.insert(task);}

    public void deleteTask(Task task) { repository.delete(task);}
}
